Enhance To-Do List UI with responsive design and footer copyright notice

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             </section>
         </main>
     </div>
+
+        <footer class="footer">
+            <p>© 2025 Ariella Chandra Naya. All rights reserved.</p>
+        </footer>
+        
     <script src="JS/script.js"></script>
 </body>
 </html>
