Add placeholder to due date input field in To-Do List form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section class="form-section">
                 <form id="todoForm">
                     <input type="text" name="todo" id="todo" placeholder="Add a todo..." required>
-                    <input type="date" name="date" id="date" required>
+                    <input type="date" name="date" id="date" placeholder="Due Date" required>
                     <button type="submit" id="addButton">+</button>
                 </form>
             </section>
